@@ -1,7 +1,7 @@
 #ifndef LIBPORT_SEMAPHORE_HH
 # define LIBPORT_SEMAPHORE_HH
 
-# if defined WIN32
+# if defined WIN32 || defined LIBPORT_WIN32
 #  define _WIN32_WINNT 0x0400
 #  include <windows.h>
 
