@@ -1,3 +1,13 @@
+2006-11-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Test whether LIBPORT_WIN32 is defined when looking for WIN32.
+        Because config.h's define might be prefixed by "LIBPORT_", we look for
+        either LIBPORT_WIN32 or just WIN32.
+	* lockable.hh,
+	* semaphore.hh,
+	* thread.hh,
+	* utime.hh: Here.
+
 2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	Don't use LARGE_INTEGER. Use __int64 instead.
